--- a/Jupyter_Notebook (1).ipynb
+++ b/Jupyter_Notebook (1).ipynb
@@ -1,1 +1,201 @@
-{"cells":[{"attachments":{},"cell_type":"markdown","metadata":{},"source":["<center>\n","    <img src=\"https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBMDeveloperSkillsNetwork-DS0105EN-SkillsNetwork/labs/Module2/images/SN_web_lightmode.png\" width=\"300\" alt=\"cognitiveclass.ai logo\">\n","</center>\n"]},{"attachments":{},"cell_type":"markdown","metadata":{},"source":["#### Add your code below following the instructions given in the course\n"]},{"attachments":{},"cell_type":"markdown","metadata":{},"source":["Jupyter_Notebook(1).ipynb"]},{"attachments":{},"cell_type":"markdown","metadata":{},"source":["datascience basics"]},{"attachments":{},"cell_type":"markdown","metadata":{},"source":["this is a project on data science where we are asked to create some markdown cells and some code cells for the purpose of evaluation\n","\n"]},{"attachments":{},"cell_type":"markdown","metadata":{},"source":["The datascience languages are\n","\n","Python\n","R\n","Scala\n","Perl\n","Matlab\n","C++"]},{"attachments":{},"cell_type":"markdown","metadata":{},"source":["The datasciece libraries are\n","\n","Tensorflow\n","Numpy\n","scipy\n","pandas\n","Scikit-Learn\n","Pytorch\n","Matplotlib"]},{"attachments":{},"cell_type":"markdown","metadata":{},"source":["The datascience tools are\n","\n","SAS\n","Apache Spark\n","Big ML"]},{"attachments":{},"cell_type":"markdown","metadata":{},"source":["arithmetic expression examples.\n","\n","Arithmetic operations\n","code = compile(\"5 + 4\", \"\", \"eval\") eval(code)\n","\n","Result: 9\n","\n","Arithmetic operations\n","code1 = compile(\"(5 + 7) * 2\", \"\", \"eval\") eval(code1)\n","\n","Result: 24"]},{"cell_type":"code","execution_count":null,"metadata":{"vscode":{"languageId":"plaintext"}},"outputs":[],"source":["(3*4)+5"]}],"metadata":{"kernelspec":{"display_name":"Python","language":"python","name":"conda-env-python-py"},"language_info":{"name":""}},"nbformat":4,"nbformat_minor":4}
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<center>\n",
+    "    <img src=\"https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBMDeveloperSkillsNetwork-DS0105EN-SkillsNetwork/labs/Module2/images/SN_web_lightmode.png\" width=\"300\" alt=\"cognitiveclass.ai logo\">\n",
+    "</center>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "#### Add your code below following the instructions given in the course\n",
+    "# Data Science Tools and Ecosystem\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this notebook, Data Science Tools and Ecosystem are summarized."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "<b>Objectives</b>\n",
+    "\n",
+    " - Learning components of a Data Scientists tool kit\n",
+    " - Learning the uses of different languages in Data Science\n",
+    " - Learning how to us Jupyter Notebooks\n",
+    " - Learning RStudio and Git Hub\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Some of the popular languages that Data Scientists use are:\n",
+    "1. Scala\n",
+    "2. Java\n",
+    "3. C++\n",
+    "4. Julia"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Some of the commonly used libraries used by Data scientists include:\n",
+    "\n",
+    "1. Matplotlib\n",
+    "2. Seaborn\n",
+    "3. Scikit-learn"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "|Data Science Tools|\n",
+    "|:-----------------|\n",
+    "|Jupyter Notebooks|\n",
+    "|Apache Zeppelin|\n",
+    "|RStudio|"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "### Examples of arithmetic expression evaluations in Python"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Here is an arithmetic expression by multiplying then adding integers\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Here is an arithmetic expression by multiplying then adding integers\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "17"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(3*4)+5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The conversion of 200 hours into minutes by dividing by 60\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"The conversion of 200 minutes into hours by dividing by 60\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.3333333333333335"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(200/60)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## Author\n",
+    "Corey Richards"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python",
+   "language": "python",
+   "name": "conda-env-python-py"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.12"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 4
+}
