--- a/Jupyter_Notebook (1).ipynb
+++ b/Jupyter_Notebook (1).ipynb
@@ -45,10 +45,18 @@
    "metadata": {},
    "source": [
     "### Some of the popular languages that Data Scientists use are:\n",
-    "1. Scala\n",
-    "2. Java\n",
-    "3. C++\n",
-    "4. Julia"
+    "1. python\n",
+    "2. R\n",
+    "3. SQL\n",
+    "4. Scala\n",
+    "5. Java\n",
+    "6. C++\n",
+    "7. Julia\n",
+    "8. Java Scirpt\n",
+    "9. PHP\n",
+    "10. Go\n",
+    "11. Ruby\n",
+    "12. Visual Basic
    ]
   },
   {
@@ -57,9 +65,18 @@
    "source": [
     "#### Some of the commonly used libraries used by Data scientists include:\n",
     "\n",
-    "1. Matplotlib\n",
-    "2. Seaborn\n",
-    "3. Scikit-learn"
+    "1. pandas\n",
+    "2. numpy\n",
+    "3. matplotlib\n",
+    "4. seaborn\n",
+    "5. keras\n",
+    "6. tensorflow\n",
+    "7. pytorch\n",
+    "8. apache spark\n",
+    "9. vegas\n",
+    "10. big DL\n",
+    "11. scikit learn\n",
+    "12. ggplot2"
    ]
   },
   {
